--- a/index.html
+++ b/index.html
@@ -2,75 +2,214 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mobile App Style Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>UniDrop Mobile Dashboard</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
+      font-family: 'Roboto', Arial, sans-serif;
+      background: #24033d;
+      color: white;
+      display: flex;
+      min-height: 100vh;
     }
 
-    header {
-      background: #007bff;
-      color: white;
-      padding: 15px;
-      text-align: center;
-      font-size: 20px;
+    /* Sidebar for desktop */
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 190px;
+      height: 100%;
+      background: #3c1f60;
+      padding: 2rem 1rem 1rem 1rem;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      border-top-right-radius: 20px;   
+      border-bottom-right-radius: 20px;
+      transition: all 0.3s ease;
+    }
+
+    .company-wrapper {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      margin-bottom: 1rem;
+      width: 100%;
+    }
+
+    .company-logo {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      overflow: hidden;
+      flex-shrink: 0;
+      margin-left: 10px;
+    }
+
+    .company-logo img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+
+    .company-name {
+      font-size: 1.2rem;
+      font-weight: 700;
+      white-space: nowrap;
+    }
+
+    .divider {
+      width: 95%;
+      height: 1px;
+      background-color: rgba(255, 255, 255, 0.2);
+      margin: 1rem 0;
     }
 
     nav {
       display: flex;
-      justify-content: space-around;
-      background: #fff;
-      border-top: 1px solid #ddd;
-      position: fixed;
-      bottom: 0;
+      flex-direction: column;
+      gap: 0.3rem;
+      flex-grow: 1;
       width: 100%;
-      padding: 10px 0;
     }
 
     nav a {
-      color: #007bff;
+      display: flex;
+      align-items: center;
+      gap: 0.8rem;
       text-decoration: none;
-      font-size: 16px;
+      color: white;
+      padding: 0.75rem 1rem;
+      border-radius: 12px;
+      transition: background 0.3s;
+      font-weight: 500;
     }
 
-    main {
-      padding: 20px;
-      padding-bottom: 70px; /* space for bottom nav */
+    nav a:hover,
+    nav a.active {
+      background: #6f1ab6;
     }
 
-    .card {
-      background: #fff;
-      margin-bottom: 15px;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    nav a i {
+      font-size: 1.2rem;
     }
 
-    /* Larger screens (tablet, desktop) */
-    @media (min-width: 768px) {
-      main {
-        max-width: 500px;
-        margin: auto;
+    /* Main content */
+    .main-content {
+      margin-left: 200px;
+      padding: 1.5rem;
+      flex: 1;
+      transition: margin-left 0.3s ease;
+    }
+
+    .topbar {
+      margin-bottom: 1.5rem;
+    }
+
+    .topbar h1 {
+      margin: 0;
+      font-size: 1.5rem;
+    }
+
+    .content-box {
+      background: #622aac;
+      padding: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    }
+
+    /* 🔹 Mobile view adjustments */
+    @media (max-width: 768px) {
+      body {
+        flex-direction: column;
+      }
+
+      .sidebar {
+        position: fixed;
+        bottom: 0;
+        top: auto;
+        width: 100%;
+        height: 60px;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        padding: 0.5rem;
+        border-radius: 0;
+      }
+
+      .company-wrapper,
+      .divider {
+        display: none;
+      }
+
+      nav {
+        flex-direction: row;
+        justify-content: space-around;
+        gap: 0;
+        width: 100%;
+      }
+
+      nav a {
+        flex-direction: column;
+        gap: 0.2rem;
+        font-size: 0.75rem;
+        padding: 0.5rem;
+      }
+
+      nav a span {
+        font-size: 0.65rem;
+      }
+
+      .main-content {
+        margin-left: 0;
+        margin-bottom: 70px; /* space for bottom nav */
+        padding: 1rem;
       }
     }
   </style>
 </head>
 <body>
-  <header>My Mobile Website</header>
+  <!-- Sidebar / Bottom Nav -->
+  <aside class="sidebar" id="sidebar">
+    <div class="company-wrapper">
+      <div class="company-logo">
+        <img src="logotry.gif" alt="UniDrop Logo">
+      </div>
+      <div class="company-name">UniDrop</div>
+    </div>
 
-  <main>
-    <div class="card">This feels like a mobile app screen.</div>
-    <div class="card">Add more sections here.</div>
-    <div class="card">You can scroll like an app!</div>
+    <div class="divider"></div>
+
+    <nav>
+      <a href="dashboard.html" class="active"><i class="fa-solid fa-house"></i> <span>Home</span></a>
+      <a href="parcels.html"><i class="fa-solid fa-box"></i> <span>Parcels</span></a>
+      <a href="users.html"><i class="fa-solid fa-users"></i> <span>Users</span></a>
+      <a href="feedback.html"><i class="fa-solid fa-comment-dots"></i> <span>Feedback</span></a>
+      <a href="settings.html"><i class="fa-solid fa-gear"></i> <span>Settings</span></a>
+    </nav>
+  </aside>
+
+  <!-- Main Content -->
+  <main class="main-content">
+    <header class="topbar">
+      <h1>Mobile-Friendly Dashboard</h1>
+    </header>
+
+    <section>
+      <div class="content-box">
+        <p>This layout keeps the sidebar on desktop, but switches to a bottom navigation bar on mobile for a true app-like experience.</p>
+      </div>
+    </section>
   </main>
-
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Profile</a>
-    <a href="#">Settings</a>
-  </nav>
 </body>
 </html>
