--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
     <nav>
       <a href="home.html" class="active"><i class="fa-solid fa-house"></i> <span>Home</span></a>
-      <a href="chat.html"><i class="fa-solid fa-comment-dots"></i> <span>Chat</span></a>
+      <a href="clientchat.html"><i class="fa-solid fa-comment-dots"></i> <span>Chat</span></a>
       <a href="profile.html"><i class="fa-solid fa-user"></i> <span>Profile</span></a>
       <a href="settings.html"><i class="fa-solid fa-gear"></i> <span>Settings</span></a>
     </nav>
@@ -257,3 +257,4 @@
   </main>
 </body>
 </html>
+
