--- a/index.html
+++ b/index.html
@@ -189,13 +189,12 @@
         bottom: 0;
         top: auto;
         width: 100%;
-        height: 70px;
+        height: 60px;
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
         padding: 0.5rem;
         border-radius: 0;
-        background: #2e1f47; /* matte background */
       }
 
       .company-wrapper,
@@ -212,45 +211,31 @@
 
       nav a {
         flex-direction: column;
-        gap: 0.3rem;
+        gap: 0.2rem;
         font-size: 0.75rem;
         padding: 0.5rem;
-        background: #3c2a57;
+      }
+
+      nav a span {
+        font-size: 0.65rem;
+      }
+
+      /* Make QR button bigger on mobile */
+      .qr-nav {
+        font-size: 0.85rem;
+        background: #ffcc66;
         border-radius: 50%;
         width: 50px;
         height: 50px;
         align-items: center;
         justify-content: center;
-        box-shadow: 0 3px 6px rgba(0,0,0,0.4);
-        transition: transform 0.2s ease, background 0.3s ease;
+        position: relative;
+        bottom: 10px;
       }
 
-      nav a:hover {
-        background: #4a356b;
-        transform: scale(1.1);
-      }
-
-      nav a i {
-        font-size: 1.2rem;
+      .qr-nav i {
+        font-size: 1.4rem;
         margin: 0;
-      }
-
-      nav a span {
-        display: none; /* Hide text on mobile */
-      }
-
-      /* Make QR button more prominent */
-      .qr-nav {
-        background: #e0c266;
-        color: #24033d !important;
-        width: 60px;
-        height: 60px;
-        font-size: 1rem;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.6);
-      }
-
-      .qr-nav:hover {
-        background: #f0d97a;
       }
 
       /* Centered mobile header */
@@ -288,7 +273,7 @@
       .main-content {
         margin-left: 0;
         margin-top: 60px; /* space for top header */
-        margin-bottom: 80px; /* space for bottom nav */
+        margin-bottom: 70px; /* space for bottom nav */
         padding: 1rem;
       }
     }
