--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>UniDrop App Layout</title>
+  <title>UniDrop Mobile</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -18,119 +18,57 @@
       background: #24033d;
       color: white;
       display: flex;
-      min-height: 100vh;
-      flex-direction: row;
-    }
-
-    /* Sidebar (desktop) */
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 190px;
-      height: 100%;
-      background: #3c1f60;
-      padding: 2rem 1rem 1rem 1rem;
-      box-sizing: border-box;
-      display: flex;
       flex-direction: column;
-      align-items: flex-start;
-      border-top-right-radius: 20px;   
-      border-bottom-right-radius: 20px;
-      transition: all 0.3s ease;
+      min-height: 100vh;
     }
 
-    .company-wrapper {
+    /* Top header */
+    .mobile-header {
       display: flex;
       align-items: center;
-      gap: 1rem;
-      margin-bottom: 1rem;
-      width: 100%;
+      justify-content: center;
+      background: #3c1f60;
+      padding: 0.75rem 1rem;
+      border-bottom: 2px solid #6f1ab6;
+    }
+
+    .header-inner {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
     }
 
     .company-logo {
-      width: 40px;
-      height: 40px;
+      width: 36px;
+      height: 36px;
       border-radius: 50%;
       overflow: hidden;
-      flex-shrink: 0;
-      margin-left: 10px;
+      margin: 0 auto
     }
 
     .company-logo img {
       width: 100%;
       height: 100%;
       object-fit: contain;
+      
     }
 
     .company-name {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       font-weight: 700;
-      white-space: nowrap;
-    }
-
-    .divider {
-      width: 95%;
-      height: 1px;
-      background-color: rgba(255, 255, 255, 0.2);
-      margin: 1rem 0;
-    }
-
-    nav {
-      display: flex;
-      flex-direction: column;
-      gap: 0.3rem;
-      flex-grow: 1;
-      width: 100%;
-    }
-
-    nav a {
-      display: flex;
-      align-items: center;
-      gap: 0.8rem;
-      text-decoration: none;
-      color: white;
-      padding: 0.75rem 1rem;
-      border-radius: 12px;
-      transition: background 0.3s;
-      font-weight: 500;
-    }
-
-    nav a:hover,
-    nav a.active {
-      background: #6f1ab6;
-    }
-
-    nav a i {
-      font-size: 1.2rem;
-    }
-
-    /* Make QR nav stand out */
-    .qr-nav {
-      background: #ffcc66;
-      color: #24033d !important;
-      font-weight: 700;
-      justify-content: center;
-    }
-
-    .qr-nav:hover {
-      background: #ffdd88;
+      margin: 0 auto
     }
 
     /* Main content */
     .main-content {
-      margin-left: 200px;
-      padding: 1.5rem;
       flex: 1;
-      transition: margin-left 0.3s ease;
-    }
-
-    .topbar {
-      margin-bottom: 1.5rem;
+      padding: 1rem;
+      margin-bottom: 70px; /* space for nav */
     }
 
     .topbar h1 {
-      margin: 0;
+      margin: 0 0 1rem 0;
       font-size: 1.5rem;
     }
 
@@ -139,6 +77,59 @@
       padding: 1.5rem;
       border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    }
+
+    /* Bottom Nav */
+    nav {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 60px;
+      background: #3c1f60;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      border-top: 2px solid #6f1ab6;
+    }
+
+    nav a {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.2rem;
+      text-decoration: none;
+      color: white;
+      font-size: 0.75rem;
+      padding: 0.5rem;
+    }
+
+    nav a i {
+      font-size: 1.2rem;
+    }
+
+    nav a.active {
+      color: #ffcc66;
+    }
+
+    /* Special QR button */
+    .qr-nav {
+      background: #ffcc66;
+      color: #24033d !important;
+      border-radius: 50%;
+      width: 55px;
+      height: 55px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      bottom: 15px;
+      font-size: 1.5rem;
+    }
+
+    .qr-nav i {
+      font-size: 2.5rem; /* ⬅ make icon bigger */
+      color: #24033d;  /* dark icon for contrast */
     }
 
     /* QR Modal */
@@ -176,134 +167,11 @@
       border-radius: 8px;
       cursor: pointer;
     }
-
-    /* 🔹 Mobile view */
-    @media (max-width: 768px) {
-      body {
-        flex-direction: column;
-      }
-
-      /* Sidebar turns into bottom nav */
-      .sidebar {
-        position: fixed;
-        bottom: 0;
-        top: auto;
-        width: 100%;
-        height: 60px;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-        padding: 0.5rem;
-        border-radius: 0;
-      }
-
-      .company-wrapper,
-      .divider {
-        display: none;
-      }
-
-      nav {
-        flex-direction: row;
-        justify-content: space-around;
-        gap: 0;
-        width: 100%;
-      }
-
-      nav a {
-        flex-direction: column;
-        gap: 0.2rem;
-        font-size: 0.75rem;
-        padding: 0.5rem;
-      }
-
-      nav a span {
-        font-size: 0.65rem;
-      }
-
-      /* Make QR button bigger on mobile */
-      .qr-nav {
-        font-size: 0.85rem;
-        background: #ffcc66;
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        bottom: 10px;
-      }
-
-      .qr-nav i {
-        font-size: 1.4rem;
-        margin: 0;
-      }
-
-      /* Centered mobile header */
-      .mobile-header {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: #3c1f60;
-        padding: 0.75rem 1rem;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 10;
-        border-bottom: 2px solid #6f1ab6;
-      }
-
-      .mobile-header .header-inner {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 0.5rem;
-      }
-
-      .mobile-header .company-logo {
-        width: 32px;
-        height: 32px;
-        margin-left: 0;
-      }
-
-      .mobile-header .company-name {
-        font-size: 1.2rem;
-      }
-
-      .main-content {
-        margin-left: 0;
-        margin-top: 60px; /* space for top header */
-        margin-bottom: 70px; /* space for bottom nav */
-        padding: 1rem;
-      }
-    }
   </style>
 </head>
 <body>
-  <!-- Sidebar / Bottom Nav -->
-  <aside class="sidebar" id="sidebar">
-    <div class="company-wrapper">
-      <div class="company-logo">
-        <img src="logotry.gif" alt="UniDrop Logo">
-      </div>
-      <div class="company-name">UniDrop</div>
-    </div>
 
-    <div class="divider"></div>
-
-    <nav>
-      <a href="index.html" class="active"><i class="fa-solid fa-house"></i> <span>Home</span></a>
-      <a href="clientchat.html"><i class="fa-solid fa-comment-dots"></i> <span>Chat</span></a>
-
-      <!-- 🔹 QR Nav in the middle -->
-      <a href="#" class="qr-nav" id="qrBtn"><i class="fa-solid fa-qrcode"></i> <span>QR</span></a>
-
-      <a href="profile.html"><i class="fa-solid fa-user"></i> <span>Profile</span></a>
-      <a href="settings.html"><i class="fa-solid fa-gear"></i> <span>Settings</span></a>
-    </nav>
-  </aside>
-
-  <!-- Mobile header (only visible on small screens) -->
+  <!-- Header -->
   <header class="mobile-header">
     <div class="header-inner">
       <div class="company-logo">
@@ -313,7 +181,7 @@
     </div>
   </header>
 
-  <!-- Main Content -->
+  <!-- Main content -->
   <main class="main-content">
     <header class="topbar">
       <h1>Home</h1>
@@ -321,10 +189,19 @@
 
     <section>
       <div class="content-box">
-        <p>Welcome to UniDrop! On <b>desktop</b>, UniDrop appears in the sidebar. On <b>mobile</b>, UniDrop is now <b>centered</b> at the top, while navigation stays at the bottom. There’s also a <b>QR button</b> for quick scanning.</p>
+        <p>Welcome to UniDrop! This layout is <b>mobile-only</b> with UniDrop branding at the top and navigation at the bottom.</p>
       </div>
     </section>
   </main>
+
+  <!-- Bottom Nav -->
+  <nav>
+    <a href="index.html" class="active"><i class="fa-solid fa-house"></i><span>Home</span></a>
+    <a href="clientchat.html"><i class="fa-solid fa-comment-dots"></i><span>Chat</span></a>
+    <a href="#" class="qr-nav" id="qrBtn"><i class="fa-solid fa-qrcode"></i></a>
+    <a href="profile.html"><i class="fa-solid fa-user"></i><span>Profile</span></a>
+    <a href="settings.html"><i class="fa-solid fa-gear"></i><span>Settings</span></a>
+  </nav>
 
   <!-- QR Modal -->
   <div class="modal" id="qrModal">
@@ -350,7 +227,6 @@
       qrModal.style.display = "none";
     });
 
-    // Close modal if clicked outside content
     window.addEventListener("click", e => {
       if (e.target === qrModal) {
         qrModal.style.display = "none";
