--- a/clientchat.html
+++ b/clientchat.html
@@ -187,7 +187,7 @@
 
   <!-- Bottom Navigation -->
   <nav class="bottom-nav">
-    <a href="client.html"><i class="fa-solid fa-house"></i><span>Home</span></a>
+    <a href="index.html"><i class="fa-solid fa-house"></i><span>Home</span></a>
     <a href="clientchat.html" class="active"><i class="fa-solid fa-comment-dots"></i><span>Chat</span></a>
     <a href="profile.html"><i class="fa-solid fa-user"></i><span>Profile</span></a>
     <a href="settings.html"><i class="fa-solid fa-gear"></i><span>Settings</span></a>
