--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     body {
       margin: 0;
       font-family: 'Roboto', Arial, sans-serif;
-      background: #24033d;
+      background: linear-gradient(180deg, #2a0845, #20002c);
       color: white;
       display: flex;
       flex-direction: column;
@@ -27,70 +27,82 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #3c1f60;
-      padding: 0.75rem 1rem;
-      border-bottom: 2px solid #6f1ab6;
+      background: linear-gradient(90deg, #6f1ab6, #9a33db);
+      padding: 0.85rem 1.2rem;
+      border-bottom: none;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
 
     .header-inner {
       display: flex;
       align-items: center;
-      justify-content: center;
-      gap: 0.5rem;
+      gap: 0.6rem;
     }
 
     .company-logo {
-      width: 36px;
-      height: 36px;
-      border-radius: 50%;
+      width: 42px;
+      height: 42px;
+      border-radius: 12px;
       overflow: hidden;
-      margin: 0 auto
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
     }
 
     .company-logo img {
       width: 100%;
       height: 100%;
       object-fit: contain;
-      
     }
 
     .company-name {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       font-weight: 700;
-      margin: 0 auto
+      letter-spacing: 0.5px;
     }
 
     /* Main content */
     .main-content {
       flex: 1;
-      padding: 1rem;
-      margin-bottom: 70px; /* space for nav */
+      padding: 1.2rem;
+      margin-bottom: 85px;
     }
 
     .topbar h1 {
       margin: 0 0 1rem 0;
-      font-size: 1.5rem;
+      font-size: 1.6rem;
+      font-weight: 600;
     }
 
     .content-box {
-      background: #622aac;
+      background: rgba(255,255,255,0.08);
       padding: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      border-radius: 16px;
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
-    /* Bottom Nav */
+    .content-box:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+    }
+
+    /* Bottom Nav (floating style) */
     nav {
       position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 60px;
-      background: #3c1f60;
+      bottom: 15px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90%;
+      height: 65px;
+      background: rgba(108,44,187,0.95);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
       display: flex;
       justify-content: space-around;
       align-items: center;
-      border-top: 2px solid #6f1ab6;
+      border: 1px solid rgba(255,255,255,0.1);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.4);
     }
 
     nav a {
@@ -99,17 +111,18 @@
       align-items: center;
       gap: 0.2rem;
       text-decoration: none;
-      color: white;
-      font-size: 0.75rem;
-      padding: 0.5rem;
+      color: rgba(255,255,255,0.85);
+      font-size: 0.8rem;
+      transition: color 0.2s ease, transform 0.2s ease;
     }
 
     nav a i {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
     }
 
     nav a.active {
       color: #ffcc66;
+      transform: scale(1.1);
     }
 
     /* Special QR button */
@@ -117,19 +130,24 @@
       background: #ffcc66;
       color: #24033d !important;
       border-radius: 50%;
-      width: 45px;
-      height: 45px;
+      width: 58px;
+      height: 58px;
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
-      bottom: 15px;
-      font-size: 1.5rem;
+      bottom: 25px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+      transition: transform 0.25s ease;
+    }
+
+    .qr-nav:hover {
+      transform: scale(1.1);
     }
 
     .qr-nav i {
-      font-size: 2rem; /* ⬅ make icon bigger */
-      color: #24033d;  /* dark icon for contrast */
+      font-size: 2rem;
+      color: #24033d;
     }
 
     /* QR Modal */
@@ -139,35 +157,57 @@
       z-index: 100;
       left: 0; top: 0;
       width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7);
+      background: rgba(0,0,0,0.5);
+      backdrop-filter: blur(8px);
       justify-content: center;
       align-items: center;
+      animation: fadeIn 0.3s ease forwards;
     }
 
     .modal-content {
-      background: white;
-      color: black;
+      background: rgba(255,255,255,0.95);
+      color: #24033d;
       padding: 2rem;
-      border-radius: 12px;
+      border-radius: 20px;
       text-align: center;
-      max-width: 300px;
+      max-width: 320px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.5);
+      animation: popUp 0.3s ease;
     }
 
     .modal-content img {
       width: 200px;
       height: 200px;
+      border-radius: 12px;
     }
 
     .close-btn {
-      margin-top: 1rem;
-      background: #6f1ab6;
+      margin-top: 1.2rem;
+      background: linear-gradient(90deg, #6f1ab6, #9a33db);
       color: white;
       border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
+      padding: 0.6rem 1.2rem;
+      border-radius: 10px;
       cursor: pointer;
+      font-weight: 600;
+      transition: opacity 0.2s ease;
+    }
+
+    .close-btn:hover {
+      opacity: 0.85;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+
+    @keyframes popUp {
+      from {transform: scale(0.9); opacity: 0;}
+      to {transform: scale(1); opacity: 1;}
     }
   </style>
+
 </head>
 <body>
 
@@ -235,4 +275,3 @@
   </script>
 </body>
 </html>
-
