--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
       backdrop-filter: blur(10px);
       border-radius: 20px;
       display: flex;
-      justify-content: space-around;
+      justify-content: space-between; /* equal gaps */
       align-items: center;
-      border: 1px solid rgba(255,255,255,0.1);
+      padding: 0 1rem; /* keep some padding on sides */
       box-shadow: 0 8px 24px rgba(0,0,0,0.4);
     }
-
+    
     nav a {
+      flex: 1;                      /* ⬅ each link takes equal width */
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -116,8 +117,9 @@
       transition: color 0.2s ease, transform 0.2s ease;
     }
 
+
     nav a i {
-      font-size: 1.3rem;
+      font-size: 1rem;
     }
 
     nav a.active {
@@ -279,4 +281,5 @@
   </script>
 </body>
 </html>
+
 
