--- a/clientchat.html
+++ b/clientchat.html
@@ -216,7 +216,7 @@
 
   <!-- Bottom Nav -->
   <nav>
-    <a href="client.html"><i class="fa-solid fa-house"></i><span>Home</span></a>
+    <a href="index.html"><i class="fa-solid fa-house"></i><span>Home</span></a>
     <a href="clientchat.html" class="active"><i class="fa-solid fa-comment-dots"></i><span>Chat</span></a>
     <a href="#" class="qr-nav" id="qrBtn"><i class="fa-solid fa-qrcode"></i></a>
     <a href="profile.html"><i class="fa-solid fa-user"></i><span>Profile</span></a>
