--- a/clientchat.html
+++ b/clientchat.html
@@ -74,14 +74,17 @@
 
     /* Chat area */
     .chat-container {
-      flex: 1;
-      margin-top: 70px;  /* leave space for header */
-      margin-bottom: 100px; /* leave space for input */
-      padding: 1rem;
+      flex: 3;
+      margin-top: 50px;  /* leave space for header */
+      margin-bottom: 70px; /* leave space for input */
+      padding: 0.5rem;
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 0.5rem;
       overflow-y: auto;
+      height: calc(100vh - 150px); 
+  /* 150px = header height (≈70px) + input height (≈80px) */
+      margin: 0; /* remove extra space */
     }
 
     .message {
@@ -94,7 +97,10 @@
     .message.user {
       background: #6f1ab6;
       align-self: flex-end;
+      transform: translateY(9px); /* adjust up by 5px */
     }
+
+
 
     .message.admin {
       background: #622aac;
