--- a/clientchat.html
+++ b/clientchat.html
@@ -97,7 +97,8 @@
     .message.user {
       background: #6f1ab6;
       align-self: flex-end;
-      transform: translateY(9px); /* adjust up by 5px */
+      transform: translateY(9px);
+      margin-right: 10px;
     }
 
 
