--- a/clientchat.html
+++ b/clientchat.html
@@ -44,6 +44,7 @@
       font-size: 1.4rem;
       color: white;
       text-decoration: none;
+      margin-left:20px;
     }
 
     .header-inner {
