--- a/client.html
+++ b/client.html
@@ -238,7 +238,7 @@
 
   <!-- Bottom Nav -->
   <nav>
-    <a href="index.html" class="active"><i class="fa-solid fa-house"></i><span>Home</span></a>
+    <a href="client.html" class="active"><i class="fa-solid fa-house"></i><span>Home</span></a>
     <a href="clientchat.html"><i class="fa-solid fa-comment-dots"></i><span>Chat</span></a>
     <a href="#" class="qr-nav" id="qrBtn"><i class="fa-solid fa-qrcode"></i></a>
     <a href="profile.html"><i class="fa-solid fa-user"></i><span>Profile</span></a>
@@ -277,3 +277,4 @@
   </script>
 </body>
 </html>
+
