--- a/clientchat.html
+++ b/clientchat.html
@@ -148,7 +148,7 @@
 <body>
   <!-- Header -->
   <header class="mobile-header">
-    <a href="index.html" class="back-button"><i class="fa-solid fa-arrow-left"></i></a>
+    <a href="client.html" class="back-button"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="header-inner">
       <div class="company-logo">
         <img src="logotry.gif" alt="UniDrop Logo">
