--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     }
 
     .signin-container {
-      width: 100%;
-      max-width: 380px;
+      width: 80%;
+      max-width: 250px;
+      height: 400px;
       background: #3c1f60;
       padding: 2rem;
       border-radius: 16px;
@@ -40,8 +41,10 @@
     }
 
     .signin-header img {
-      width: 70px;
+      width: 90px;
+      height: 90px;
       margin-bottom: 0.8rem;
+      gap: 2rem;
     }
 
     .signin-header h2 {
@@ -92,10 +95,11 @@
     .extra-links {
       text-align: center;
       font-size: 0.9rem;
+      color: white;
     }
 
     .extra-links a {
-      color: #9a33db;
+      color: #ffffff;
       text-decoration: none;
       margin: 0 0.5rem;
     }
