--- a/client.html
+++ b/client.html
@@ -30,6 +30,8 @@
       background: linear-gradient(90deg, #6f1ab6, #9a33db);
       padding: 0.85rem 1.2rem;
       border-bottom: none;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
 
@@ -277,4 +279,3 @@
   </script>
 </body>
 </html>
-
