--- a/client.html
+++ b/client.html
@@ -30,8 +30,8 @@
       background: linear-gradient(90deg, #6f1ab6, #9a33db);
       padding: 0.85rem 1.2rem;
       border-bottom: none;
-      border-bottom-left-radius: 40px;
-      border-bottom-right-radius: 40px;
+      border-bottom-left-radius: 30px;
+      border-bottom-right-radius: 30px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
 
@@ -92,14 +92,15 @@
     /* Bottom Nav (floating style) */
     nav {
       position: fixed;
-      bottom: 15px;
+      bottom: 2px;
       left: 50%;
       transform: translateX(-50%);
       width: 90%;
       height: 65px;
       background: rgba(108,44,187,0.95);
       backdrop-filter: blur(10px);
-      border-radius: 20px;
+      border-top-left-radius: 40px;
+      border-top-right-radius: 40px;
       display: flex;
       justify-content: space-between; /* equal gaps */
       align-items: center;
@@ -279,4 +280,3 @@
   </script>
 </body>
 </html>
-
