--- a/clientchat.html
+++ b/clientchat.html
@@ -34,6 +34,8 @@
       position: relative;
       background: linear-gradient(90deg, #6f1ab6, #9a33db);
       padding: 0.85rem 1.2rem;
+      border-bottom-left-radius: 30px;
+      border-bottom-right-radius: 30px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
 
