--- a/client.html
+++ b/client.html
@@ -126,9 +126,12 @@
     }
 
     nav a.active {
-      color: #ffcc66;
-      transform: scale(1.1);
+      color: #e5c2ff;
+      transform: scale(1.2);
+      text-shadow: 0 0 10px #6c22a3, 0 0 20px #4f0b93;
+      font-weight: bold;
     }
+
 
     /* Special QR button */
     .qr-nav {
