--- a/client.html
+++ b/client.html
@@ -247,7 +247,7 @@
     <a href="client.html" class="active"><i class="fa-solid fa-house"></i><span>Home</span></a>
     <a href="clientchat.html"><i class="fa-solid fa-comment-dots"></i><span>Chat</span></a>
     <a href="#" class="qr-nav" id="qrBtn"><i class="fa-solid fa-qrcode"></i></a>
-    <a href="profile.html"><i class="fa-solid fa-user"></i><span>Profile</span></a>
+    <a href="clientprofile.html"><i class="fa-solid fa-user"></i><span>Profile</span></a>
     <a href="settings.html"><i class="fa-solid fa-gear"></i><span>Settings</span></a>
   </nav>
 
@@ -283,3 +283,4 @@
   </script>
 </body>
 </html>
+
