--- a/clientprofile.html
+++ b/clientprofile.html
@@ -29,7 +29,6 @@
       justify-content: center;
       background: linear-gradient(90deg, #6f1ab6, #9a33db);
       padding: 0.85rem 1.2rem;
-      border-bottom: none;
       border-bottom-left-radius: 30px;
       border-bottom-right-radius: 30px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
@@ -85,12 +84,19 @@
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
     }
 
-    .profile-card img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
+    .profile-card .avatar {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%; /* fully round */
       border: 3px solid #6f1ab6;
-      margin-bottom: 1rem;
+      margin: 0 auto 1rem auto; /* center horizontally and keep bottom margin */
+      overflow: hidden;
+    }
+
+
+    .profile-card .avatar img {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
 
@@ -177,29 +183,6 @@
       text-shadow: 0 0 10px #6c22a3, 0 0 20px #4f0b93;
       font-weight: bold;
     }
-
-    /* QR button same as before */
-    .qr-nav {
-      background: #ffcc66;
-      color: #24033d !important;
-      border-radius: 50%;
-      width: 70px;
-      height: 70px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: absolute;
-      left: 83%;
-      transform: translateX(-50%) translateY(-25%);
-      bottom: 90px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.4);
-      transition: transform 0.25s ease;
-    }
-
-    .qr-nav i {
-      font-size: 2.5rem;
-      color: #24033d;
-    }
   </style>
 </head>
 <body>
@@ -221,13 +204,15 @@
     </header>
 
     <section class="profile-card">
-      <img src="profilepic.jpg" alt="User Picture">
-      <h2>John Doe</h2>
-      <p>johndoe@email.com</p>
+      <div class="avatar">
+        <img src="profile.jpg" alt="User Picture">
+      </div>
+      <h2>Aliss Soraya</h2>
+      <p>sorayaaliss031@gmail.com</p>
 
       <div class="profile-actions">
         <button class="edit-btn"><i class="fa-solid fa-user-pen"></i> Edit Profile</button>
-        <button class="logout-btn"><i class="fa-solid fa-right-from-bracket"></i> Log Out</button>
+        <button class="logout-btn" onclick="location.href='signin.html'"><i class="fa-solid fa-right-from-bracket"></i> Log Out</button>
       </div>
     </section>
   </main>
@@ -236,7 +221,6 @@
   <nav>
     <a href="client.html"><i class="fa-solid fa-house"></i><span>Home</span></a>
     <a href="clientchat.html"><i class="fa-solid fa-comment-dots"></i><span>Chat</span></a>
-    <a href="#" class="qr-nav" id="qrBtn"><i class="fa-solid fa-qrcode"></i></a>
     <a href="clientprofile.html" class="active"><i class="fa-solid fa-user"></i><span>Profile</span></a>
     <a href="settings.html"><i class="fa-solid fa-gear"></i><span>Settings</span></a>
   </nav>
