--- a/clientchat.html
+++ b/clientchat.html
@@ -135,6 +135,7 @@
     nav {
       position: fixed;
       bottom: 0;
+      top: 627px;
       left: 50%;
       transform: translateX(-50%);
       width: 90%;
