--- a/clientchat.html
+++ b/clientchat.html
@@ -90,7 +90,12 @@
     .message.user {
       background: #6f1ab6;
       align-self: flex-end;
+      /* Move it up */
+      margin-bottom: 2px; /* pushes it closer to the input */
+      margin-right:20px;
+      transform: translateY(-240px); /* moves it up visually */
     }
+
 
     .message.admin {
       background: #622aac;
