--- a/clientchat.html
+++ b/clientchat.html
@@ -16,21 +16,24 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 
   <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-    }
-
     body {
+      margin: 0;
       font-family: 'Roboto', Arial, sans-serif;
       background: linear-gradient(180deg, #2a0845, #20002c);
       color: white;
+      height: 100vh;
       display: flex;
       flex-direction: column;
+      overflow: hidden;
     }
 
-    /* Header */
+    /* Fixed header */
     .mobile-header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 10;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -39,7 +42,6 @@
       border-bottom-left-radius: 30px;
       border-bottom-right-radius: 30px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-      flex-shrink: 0;
     }
 
     .header-inner {
@@ -68,16 +70,19 @@
       letter-spacing: 0.5px;
     }
 
-    /* Chat area fills available space */
+    /* Scrollable chat container */
     .chat-container {
-      flex: 1;
+      position: absolute;
+      top: 60px;      /* header height */
+      bottom: 140px;  /* input + nav */
+      left: 0;
+      right: 0;
+      padding: 0.5rem;
       display: flex;
       flex-direction: column;
-      justify-content: flex-end; /* messages start from bottom */
-      padding: 0.5rem;
       gap: 0.5rem;
-      overflow: hidden; /* disable scrolling */
-      flex-wrap: wrap;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
     }
 
     .message {
@@ -90,22 +95,18 @@
     .message.user {
       background: #6f1ab6;
       align-self: flex-end;
-      /* Move it up */
-      margin-bottom: 2px; /* pushes it closer to the input */
-      margin-right:20px;
-      transform: translateY(-240px); /* moves it up visually */
+      margin-right: 10px;
     }
-
 
     .message.admin {
       background: #622aac;
       align-self: flex-start;
     }
 
-    /* Chat input fixed above nav */
+    /* Fixed chat input above nav */
     .chat-input {
       position: fixed;
-      bottom: 65px; /* just above nav */
+      bottom: 65px;  /* above nav */
       left: 50%;
       transform: translateX(-50%);
       width: 90%;
@@ -115,7 +116,7 @@
       padding: 0.5rem;
       border: 2px solid #6f1ab6;
       border-radius: 12px;
-      z-index: 5;
+      z-index: 10;
     }
 
     .chat-input input {
@@ -137,7 +138,7 @@
       cursor: pointer;
     }
 
-    /* Bottom nav */
+    /* Fixed bottom nav */
     nav {
       position: fixed;
       bottom: 0;
@@ -154,7 +155,7 @@
       align-items: center;
       padding: 0 1rem;
       box-shadow: 0 8px 24px rgba(0,0,0,0.4);
-      flex-shrink: 0;
+      z-index: 10;
     }
 
     nav a {
@@ -194,7 +195,7 @@
 
   <!-- Chat area -->
   <main class="chat-container" id="chat-container">
-    <!-- Messages will appear here, stacked from bottom -->
+    <!-- Messages will load here -->
   </main>
 
   <!-- Chat input -->
@@ -231,6 +232,7 @@
 
     const userId = "user123";
 
+    // Listen for new messages
     db.collection("chat")
       .orderBy("timestamp")
       .onSnapshot(snapshot => {
@@ -243,19 +245,25 @@
           div.textContent = data.text;
           chatContainer.appendChild(div);
         });
+        // Scroll to bottom
+        chatContainer.scrollTop = chatContainer.scrollHeight;
       });
 
+    // Send message
     sendBtn.addEventListener("click", async () => {
       const text = messageInput.value.trim();
-      if (!text) return;
+      if (text === "") return;
+
       await db.collection("chat").add({
         text,
         sender: userId,
         timestamp: firebase.firestore.FieldValue.serverTimestamp()
       });
+
       messageInput.value = "";
     });
 
+    // Enter key sends
     messageInput.addEventListener("keypress", e => {
       if (e.key === "Enter") sendBtn.click();
     });
