--- a/client.html
+++ b/client.html
@@ -20,19 +20,24 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      overflow-x: hidden;
     }
 
-    /* Top header */
+    /* Fixed header */
     .mobile-header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
       background: linear-gradient(90deg, #6f1ab6, #9a33db);
       padding: 0.85rem 1.2rem;
-      border-bottom: none;
       border-bottom-left-radius: 30px;
       border-bottom-right-radius: 30px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      z-index: 10;
     }
 
     .header-inner {
@@ -61,11 +66,13 @@
       letter-spacing: 0.5px;
     }
 
-    /* Main content */
+    /* Scrollable main content */
     .main-content {
       flex: 1;
       padding: 1.2rem;
-      margin-bottom: 85px;
+      margin-top: 70px;   /* height of header */
+      margin-bottom: 100px; /* leave space for bottom nav */
+      overflow-y: auto;
     }
 
     .topbar h1 {
@@ -82,6 +89,7 @@
       -webkit-backdrop-filter: blur(12px);
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
+      margin-bottom: 8px;
     }
 
     .content-box:hover {
@@ -92,7 +100,7 @@
     /* Bottom Nav (floating style) */
     nav {
       position: fixed;
-      bottom: 2px;
+      bottom: 0;
       left: 50%;
       transform: translateX(-50%);
       width: 90%;
@@ -102,14 +110,15 @@
       border-top-left-radius: 40px;
       border-top-right-radius: 40px;
       display: flex;
-      justify-content: space-between; /* equal gaps */
+      justify-content: space-between;
       align-items: center;
-      padding: 0 1rem; /* keep some padding on sides */
+      padding: 0 1rem;
       box-shadow: 0 8px 24px rgba(0,0,0,0.4);
+      z-index: 10;
     }
 
     nav a {
-      flex: 1;                      /* ⬅ each link takes equal width */
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -119,7 +128,6 @@
       font-size: 0.8rem;
       transition: color 0.2s ease, transform 0.2s ease;
     }
-
 
     nav a i {
       font-size: 1.3rem;
@@ -132,7 +140,6 @@
       font-weight: bold;
     }
 
-
     /* Special QR button */
     .qr-nav {
       background: #ffcc66;
@@ -144,13 +151,13 @@
       justify-content: center;
       align-items: center;
 
-      position: absolute;   /* ⬅ instead of relative */
-      left: 83%;            /* push to middle */
-      transform: translateX(-50%) translateY(-25%); /* perfectly centered */
-      bottom: 90px;
-
+      position: absolute;
+      right: 120px;
+      transform: translateX(-50%) translateY(-50%);
+      bottom: 60px; /* middle of nav height */
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
       transition: transform 0.25s ease;
+      z-index: 11;
     }
 
     .qr-nav i {
@@ -232,12 +239,18 @@
   <!-- Main content -->
   <main class="main-content">
     <header class="topbar">
-      <h1>Home</h1>
+      <h1>Welcome Aliss!</h1>
     </header>
 
     <section>
       <div class="content-box">
         <p>Welcome to UniDrop! This layout is <b>mobile-only</b> with UniDrop branding at the top and navigation at the bottom.</p>
+      </div>
+      <div class="content-box">
+        <p>Add more content here to test scrolling. The header and nav will stay fixed while you scroll.</p>
+      </div>
+      <div class="content-box">
+        <p>Even more content to make scrolling visible...</p>
       </div>
     </section>
   </main>
@@ -283,4 +296,3 @@
   </script>
 </body>
 </html>
-
